# gen_lsp_tdm

./: .gitignore  README.md  pyproject.toml
demo/: .gitignore  README.md  demo.cpp
gen_lsp_tdm/: cmake_init.py  main.py
gen_lsp_tdm/data/: CMakeLists.txt  CMakePresets.json
gen_lsp_tdm/gen_lsp_for_gcc/: main.py  open_error_file.py  open_output_file.py
