[project]
name = "gen-lsp-tdm"
version = "2025.3.20.1"
description = "Fix compile commands for gcc/tdm-gcc for use with clangd on Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sodatools>=2025.2.16.0",
]

[project.urls]
Repository = "https://github.com/soda92/gen_lsp_tdm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["gen_lsp_tdm"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["gen_lsp_tdm"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[project.scripts]
gen_lsp_tdm = "gen_lsp_tdm.main:main"
tdm_cmake_init = "gen_lsp_tdm.cmake_init:tdm_cmake_init"
